// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip> for cycling ramp, renders: duration, power-range, %FTP-range, cadence 1`] = `
.c0 {
  position: absolute;
  z-index: 100;
  top: -95px;
  left: 0;
  color: white;
  background-color: rgba(0,0,0,0.7);
  width: 150px;
  border-radius: 5px;
  margin: 5px 0;
  font-size: 14px;
  padding: 5px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 14px;
  padding-right: 5px;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  font-size: 14px;
  height: 19px;
}

<div
  className="c0"
>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faClock"
    />
     
    01:40
  </div>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faBolt"
    />
     
    100 W
     -
     
    200 W
  </div>
  <div>
    50%
     -
     
    100%
     FTP
  </div>
  <div
    className="c1"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <label
      className="c2"
    >
      <img
        alt="Cadence"
        src="test-file-stub"
        width="16"
      />
    </label>
    <span
      className="c3"
    >
      —
    </span>
  </div>
</div>
`;

exports[`<Tooltip> for cycling, renders: duration, power, w/kg, %FTP, cadence 1`] = `
.c0 {
  position: absolute;
  z-index: 100;
  top: -95px;
  left: 0;
  color: white;
  background-color: rgba(0,0,0,0.7);
  width: 150px;
  border-radius: 5px;
  margin: 5px 0;
  font-size: 14px;
  padding: 5px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 14px;
  padding-right: 5px;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  font-size: 14px;
  height: 19px;
}

<div
  className="c0"
>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faClock"
    />
     
    01:40
  </div>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faBolt"
    />
     
    250 W
  </div>
  <div>
    3.3 W/kg
     ·
     
    125%
     FTP
  </div>
  <div
    className="c1"
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  >
    <label
      className="c2"
    >
      <img
        alt="Cadence"
        src="test-file-stub"
        width="16"
      />
    </label>
    <span
      className="c3"
    >
      —
    </span>
  </div>
</div>
`;

exports[`<Tooltip> for running (in distance mode), renders: duration, distance, %pace, pace type, speed 1`] = `
.c0 {
  position: absolute;
  z-index: 100;
  top: -95px;
  left: 0;
  color: white;
  background-color: rgba(0,0,0,0.7);
  width: 150px;
  border-radius: 5px;
  margin: 5px 0;
  font-size: 14px;
  padding: 5px;
}

<div
  className="c0"
>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faClock"
    />
     
    01:40
  </div>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faRuler"
    />
     
    1250 m
  </div>
  <div>
    125%
     
    10K pace
  </div>
  <div>
    1:20/km
  </div>
</div>
`;

exports[`<Tooltip> for running ramp, renders: duration, distance, %pace-range, pace type, speed-range 1`] = `
.c0 {
  position: absolute;
  z-index: 100;
  top: -95px;
  left: 0;
  color: white;
  background-color: rgba(0,0,0,0.7);
  width: 150px;
  border-radius: 5px;
  margin: 5px 0;
  font-size: 14px;
  padding: 5px;
}

<div
  className="c0"
>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faClock"
    />
     
    01:40
  </div>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faRuler"
    />
     
    750 m
  </div>
  <div>
    50%
     to
     
    100%
     
    10K pace
  </div>
  <div>
    3:20/km
     
    to
     
    1:40/km
  </div>
</div>
`;

exports[`<Tooltip> for running, renders: duration, distance, %pace, pace type, speed 1`] = `
.c0 {
  position: absolute;
  z-index: 100;
  top: -95px;
  left: 0;
  color: white;
  background-color: rgba(0,0,0,0.7);
  width: 150px;
  border-radius: 5px;
  margin: 5px 0;
  font-size: 14px;
  padding: 5px;
}

<div
  className="c0"
>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faClock"
    />
     
    01:40
  </div>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faRuler"
    />
     
    1250 m
  </div>
  <div>
    125%
     
    10K pace
  </div>
  <div>
    1:20/km
  </div>
</div>
`;
